--- a/change_ejs/index.ejs
+++ b/change_ejs/index.ejs
@@ -3,22 +3,106 @@
   <head>
     <title>Node.js Group Chat</title>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font: 13px Helvetica, Arial; }
-        form { background: #fff; padding: 3px; position: fixed; bottom: 0; width: 100%; border-color: #000; border-top-style: solid; border-top-width: 1px;}
-        form input { font-size:15px; border-style: solid; border-width: 1px; padding: 10px; width: 75%; margin-right: .5%; }
-        form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; margin-left: 2%; }
-        #messages { list-style-type: none; margin: 0; padding: 0; }
-        #messages li { padding: 5px 10px; }
-        #messages li:nth-child(odd) { background: #ddd; }
-        #chat_status {margin-bottom: 1%; margin-left: 1%;}
+      * { margin: 0; padding: 0; box-sizing: border-box; }
+      body { font: 16px Helvetica, Arial; }
+      form { background: #fff; padding: 3px; position: fixed; bottom: 0; width: 100%; border-color: #000; border-top-style: solid; border-top-width: 1px;}
+      form input { font-size:14px; border-style: solid; border-width: 1px; padding: 10px; width: 75%; margin-right: .5%; }
+      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; margin-left: 2%; }
+      #messages { list-style-type: none; margin: 0; padding: 0; }
+      #messages li { padding: 5px 10px; }
+      #messages li:nth-child(odd) { background: #ddd; }
+      #chat_status {margin-bottom: 1%; margin-left: 1%;}
+      #btn_email_msg {margin-left: 43px; margin-bottom: 1%;}
+      #check_all_container{margin-left: 10px; margin-top: 10px !important; margin-bottom:1px !important;}
+
+      /* The container of checkbox*/
+      .container {
+        display: block;
+        position: relative;
+        padding-left: 35px;
+        margin-bottom: 1px;
+        cursor: pointer;
+        font-size: 15px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      /* Hide the browser's default checkbox */
+      .container input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+      }
+
+      /* Create a custom checkbox */
+      .checkmark {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 17px;
+        width: 17px;
+        background-color: white;
+        border: solid #ccc;
+        border-width: 1.5px 1.5px 1.5px 1.5px ;
+        border-radius: 3.5px;
+        margin-left: 2px;
+      }
+
+      /* On mouse-over, add a grey background color */
+      .container:hover input ~ .checkmark {
+        border: solid black;
+      }
+
+      /* When the checkbox is checked, add a blue background */
+      .container input:checked ~ .checkmark {
+        background-color: black;
+        border: solid black;
+      }
+
+      /* Create the checkmark/indicator (hidden when not checked) */
+      .checkmark:after {
+        content: "";
+        position: absolute;
+        display: none;
+      }
+
+      /* Show the checkmark when checked */
+      .container input:checked ~ .checkmark:after {
+        display: block;
+      }
+
+      /* Style the checkmark/indicator */
+      .container .checkmark:after {
+        left: 2px;
+        width: 3px;
+        bottom: 1px;
+        height: 8.5px;
+        border: solid white;
+        border-width: 0 3px 3px 0;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+      }
+
+
+
     </style>
     <script src="../../socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   </head>
   <body onload='load()'>
-    <input type="checkbox" id="check_all">
-    <button id="btn_email_msg" >Email messages</button>
+
+    <label class="container" id="check_all_container">
+      <input type="checkbox" id="check_all">
+      <span class="checkmark"></span>
+    </label>
+
+    <!--input type="checkbox" id="check_all"-->
+    <button id="btn_email_msg" >Email Messages</button>
     <ul id="messages"></ul>
     <form action="/" method="POST" id="chatForm">
       <p id='chat_status' color="gray">no people in the ChatRoom</p>
@@ -85,29 +169,33 @@
 	      }
       });
 
-      //listen to user click select all checkbox event
-      /**continue here 9  7  2019**/
-      $('#check_all').click( function(){
-        let status = this.checked;
-        console.log(status);
-        $("input[name='email_msg_checkbox']").each(function(){  
-          $(this).attr("checked", status);
-        });
+      //listen to check_all button click event, change all checkboxes to checked
+      $('#check_all').on('click',function(){
+        if(this.checked){
+            $('.checkbox').each(function(){
+                this.checked = true;
+            });
+        }
+        else{
+             $('.checkbox').each(function(){
+                this.checked = false;
+            });
+        }
       });
 
       //send messages and the destination email to server
       $("#btn_email_msg").click( function(){
-        console.log('prompt email');
         var email = prompt('Please enter the recipient email', "nfccarmen@gmail.com");
         //collect all messages that has been checked
         if (email != null){
           email = email.trim().toLowerCase();
           var email_msg_index = [];
           //select all checked box and push their values
-          $.each($("input[name='email_msg_checkbox']:checked"), function(){            
+          $.each($("input[class='checkbox']:checked"), function(){            
             email_msg_index.push($(this).val());
             $(this).attr("checked", false);
           });
+          $("#check_all").prop('checked',false);
           //console.log("send " + email_msg_index + " to " + email);
           socket.emit('email_msg', {"dest_email":email, "email_msg_index":email_msg_index});
         }
@@ -125,8 +213,16 @@
       });
       // append the chat text message
       socket.on('chat_message', function(msg){
-          var checkbox_tag = "<input type=\"checkbox\"" + " value=\"" + msg['index'] + "\" name=\"email_msg_checkbox\"> " + msg['data'];
-          $('#messages').append($('<li>').html(checkbox_tag));
+
+        /*<label class="container">
+          <input type="checkbox" id="check_all">
+          <span class="checkmark"></span>
+        </label>*/
+        var checkbox_tag = "<label class = \"container\">"+msg['data'] +"<input type=\"checkbox\" class=\"checkbox\" value=\"" + msg['index'] + "\"> <span class=\"checkmark\"> </span>" + 
+        " </label>";
+        console.log(checkbox_tag);
+        //var checkbox_tag = "<input type=\"checkbox\"" + " value=\"" + msg['index'] + "\" class=\"checkbox\"> " + msg['data'];
+        $('#messages').append($('<li>').html(checkbox_tag));
       });
       // append text if someone is online
       socket.on('is_online', function(username) {
