--- a/change_ejs/index.ejs
+++ b/change_ejs/index.ejs
@@ -114,6 +114,7 @@
       var recognition = null;
       var finalTranscript = null;
       var recording = false;
+      //var username = '';
 
       //edit bth_listen inner text and color
       function edit_btn_listen(txt, color){
@@ -136,7 +137,7 @@
 	          let interimTranscript = '';
             //go through all possible result
 	          for (let i = event.resultIndex, len = event.results.length; i < len; i++){
-              console.log(event.results[i][0]);
+              //console.log(event.results[i][0]);
               let transcript = event.results[i][0].transcript;
               if (event.results[i].isFinal) {
                 finalTranscript = transcript;
@@ -158,7 +159,18 @@
           console.log('Speech recognition failed');
           $("#btn_listen").attr('disabled', true);
         }
+        // ask username
+        let username = prompt('Please enter your name below');
+        socket.emit('username', username);
+
+        //acknowledge the email sent
+        socket.on('email_msg_res' + '_' + username, function(msg){
+          alert(msg);
+        });
       }
+
+            
+
       
       //start voice recognition when "btn_listen" has been clicked
       $("#btn_listen").click( function(){
@@ -220,7 +232,7 @@
         </label>*/
         var checkbox_tag = "<label class = \"container\">"+msg['data'] +"<input type=\"checkbox\" class=\"checkbox\" value=\"" + msg['index'] + "\"> <span class=\"checkmark\"> </span>" + 
         " </label>";
-        console.log(checkbox_tag);
+        //console.log(checkbox_tag);
         //var checkbox_tag = "<input type=\"checkbox\"" + " value=\"" + msg['index'] + "\" class=\"checkbox\"> " + msg['data'];
         $('#messages').append($('<li>').html(checkbox_tag));
       });
@@ -235,10 +247,9 @@
         var chatHtml = document.getElementById("chat_status");
         chatHtml.innerText = msg + ' people in the chat....';
       });
-      
-      // ask username
-      var username = prompt('Please enter your name below');
-      socket.emit('username', username);
+
+
+
     </script>
   </body>
 </html>
