--- a/change_ejs/index.ejs
+++ b/change_ejs/index.ejs
@@ -6,8 +6,8 @@
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 16px Helvetica, Arial; }
       form { background: #fff; padding: 3px; position: fixed; bottom: 0; width: 100%; border-color: #000; border-top-style: solid; border-top-width: 1px;}
-      form input { font-size:14px; border-style: solid; border-width: 1px; padding: 10px; width: 75%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; margin-left: 2%; }
+      form input { font-size:14px; border-style: solid; border-width: 1px; padding: 10px; width: 70%; margin-right: .5%; }
+      form button { width: 23%; background: rgb(130, 224, 255); border: none; padding: 10px; margin-left: 2%; }
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #ddd; }
@@ -106,7 +106,7 @@
     <ul id="messages"></ul>
     <form action="/" method="POST" id="chatForm">
       <p id='chat_status' color="gray">no people in the ChatRoom</p>
-      <input id="txt" autocomplete="off" autofocus="on" placeholder="type your message here..." /><button id = "btn_send">Send</button>
+      <input id="txt" autocomplete="off" autofocus="on" placeholder="type your message here..." /> <button id = "btn_send" style=" width: 1px; height: 1px; padding: 1px; font-size:1px; margin-left: 2px;">Send</button>
       <button id="btn_listen"  type=button > Listen </button>
     </form>
     <script>
@@ -131,27 +131,42 @@
           recognition.interimResults = true;
 	        recognition.maxAlternatives = 5;
           recognition.lang = "en-US";
+          recognition.continuous = true;
           //listen to the event that an result has been receive from recognition
           recognition.onresult = (event) => {
-	          let interimTranscript = '';
+            let tempStr = $('#txt').val();
+	          //let interimTranscript = '';
             //go through all possible result
 	          for (let i = event.resultIndex, len = event.results.length; i < len; i++){
-              //console.log(event.results[i][0]);
+              //console.log(event.results[i][0].transcript);
               let transcript = event.results[i][0].transcript;
               if (event.results[i].isFinal) {
                 finalTranscript = transcript;
-                $('#txt').val(finalTranscript + '');
-                edit_btn_listen('Listen', 'rgb(130, 224, 255)');
-              } else {
+                $('#txt').val( tempStr + finalTranscript);
+                //edit_btn_listen('Listen', 'rgb(130, 224, 255)');
+              } 
+              /*else {
                 interimTranscript += transcript;
-                $('#txt').val(interimTranscript);
-              }
+                console.log(interimTranscript);
+                $('#txt').val(tempStr + ' ' + interimTranscript);
+              }*/
 	          }
-       	  }
+           }
+          recognition.onend = () => {
+            //console.log("recording" + recording);
+            if (recording){
+              recognition.start();
+            }
+            else{
+              $('#btn_send').click();
+            }
+          }
           //listen an event of voice recording end
           recognition.onaudioend = () =>{
-            recording = false;
-            edit_btn_listen('Listen', 'rgb(130, 224, 255)');
+            //console.log("onaudio end")
+          }
+          recognition.onsudiostart = () =>{
+            console.log("on audio start");
           }
         }
         else{
@@ -169,12 +184,18 @@
       }
       
       //start voice recognition when "btn_listen" has been clicked
-      $("#btn_listen").click( function(){
+      $("#btn_listen").on("mousedown", function(){
 	      if (recognition != null && !recording){
           recognition.start();
           recording = true;
           edit_btn_listen('Listening...', 'lime');
 	      }
+      }).on("mouseup mouseleave", function(){
+          //"mouseleave" when mouse leave the button
+          //execute when user release the mouse
+          recognition.stop();
+          recording = false;
+          edit_btn_listen('Listen', 'rgb(130, 224, 255)');
       });
 
       //listen to check_all button click event, change all checkboxes to checked
