--- a/change_ejs/index.ejs
+++ b/change_ejs/index.ejs
@@ -93,6 +93,9 @@
     </style>
     <script src="../../socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="https://unpkg.com/mic-recorder-to-mp3"></script>
+    <script src="/siofu/client.js"></script>
   </head>
   <body onload='load()'>
 
@@ -108,6 +111,7 @@
       <!--p id='chat_status' color="gray">no people in the ChatRoom</p-->
       <input id="txt" autocomplete="off" autofocus="on" placeholder="type your message here..." /> <button id = "btn_send" style=" width: 1px; height: 1px; padding: 1px; font-size:1px; margin-left: 2px;">Send</button>
       <button id="btn_listen"  type=button > Listen </button>
+      <ul id="playlist"></ul>
     </form>
     <script>
       //init global variables for voice recoginition
@@ -116,6 +120,7 @@
       var recording = false;
       var login = false;
       let socketID = "";
+      var SocketIOFileUpload = require('socketio-file-upload');
       //var socket = io.connect('http://192.198.186.143:8080');
 
       var socket = io.connect();
@@ -153,7 +158,7 @@
                 $('#txt').val( tempStr + finalTranscript);
               }
 	          }
-           }
+          }
           recognition.onend = () => {
             //console.log("recording" + recording);
             if (recording){
@@ -181,6 +186,7 @@
       //start voice recognition when "btn_listen" has been clicked
       $("#btn_listen").on("mousedown", function(){
 	      if (recognition != null && !recording){
+          startRecording();
           recognition.start();
           recording = true;
           edit_btn_listen('Listening...', 'lime');
@@ -188,6 +194,7 @@
       }).on("mouseup mouseleave", function(){
           //"mouseleave" when mouse leave the button
           //execute when user release the mouse
+          stopRecording();
           recognition.stop();
           recording = false;
           edit_btn_listen('Listen', 'rgb(130, 224, 255)');
@@ -269,6 +276,41 @@
         var chatHtml = document.getElementById("chat_status");
         chatHtml.innerText = msg + ' people in the chat....';
       });*/
+      //set up voice recorder 
+      const recorder = new MicRecorder({
+        bitRate: 128
+      });
+      //start recording
+      function startRecording() {
+        recorder.start().then(() => {
+          console.log('start recording');
+        }).catch((e) => {
+          console.error(e);
+        });
+      }
+      //stop recording and create a mp3 file
+      //**it create two extra empty (blob['size] > 0) audio file automatically
+      function stopRecording() {
+        recorder.stop().getMp3().then(([buffer, blob]) => {
+          if (blob['size'] > 0){
+            console.log(buffer, blob);
+            const file = new File(buffer, 'music.mp3', {
+              type: blob.type,
+              lastModified: Date.now()
+            });
+
+            const li = document.createElement('li');
+            const player = new Audio(URL.createObjectURL(file));
+            player.controls = true;
+            li.appendChild(player);
+            document.querySelector('#playlist').appendChild(li);
+            var uploader = new SocketIOFileUpload(socket);
+            uploader.listenOnInput(file);
+          }
+        }).catch((e) => {
+          console.error(e);
+        });
+      }
 
     </script>
   </body>
