--- a/change_ejs/post/index.ejs
+++ b/change_ejs/post/index.ejs
@@ -93,6 +93,9 @@
     </style>
     <script src="../../socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="https://unpkg.com/mic-recorder-to-mp3"></script>
+    <!--script src="https://192.168.186.143:8083/siofu/client.js"></script-->
   </head>
   <body onload='load()'>
 
@@ -108,6 +111,7 @@
       <!--p id='chat_status' color="gray">no people in the ChatRoom</p-->
       <input id="txt" autocomplete="off" autofocus="on" placeholder="type your message here..." /> <button id = "btn_send" style=" width: 1px; height: 1px; padding: 1px; font-size:1px; margin-left: 2px;">Send</button>
       <button id="btn_listen"  type=button > Listen </button>
+      <ul id="playlist"></ul>
     </form>
     <script>
       //init global variables for voice recoginition
@@ -117,8 +121,9 @@
       var login = false;
       let socketID = "";
       //var socket = io.connect('http://192.198.186.143:8080');
-
       var socket = io.connect();
+      //var uploader = new SocketIOFileUpload(socket);
+
       //when socket connected
       socket.on('connect', function(){
         socketID = socket.id;
@@ -153,7 +158,7 @@
                 $('#txt').val( tempStr + finalTranscript);
               }
 	          }
-           }
+          }
           recognition.onend = () => {
             //console.log("recording" + recording);
             if (recording){
@@ -175,17 +180,13 @@
           console.log('Speech recognition failed');
           $("#btn_listen").attr('disabled', true);
         }
-        //ask username
-        //let username = prompt('Please enter your name below');
-        //socket.emit('username', username);
         $('#messages').append($('<li>').html('⚫ <i> Please hold "Listen" button and tell me your username...</i>'));
-        //acknowledge user about email sent or fail
-
       }
       
       //start voice recognition when "btn_listen" has been clicked
       $("#btn_listen").on("mousedown", function(){
 	      if (recognition != null && !recording){
+          startRecording();
           recognition.start();
           recording = true;
           edit_btn_listen('Listening...', 'lime');
@@ -193,6 +194,7 @@
       }).on("mouseup mouseleave", function(){
           //"mouseleave" when mouse leave the button
           //execute when user release the mouse
+          stopRecording();
           recognition.stop();
           recording = false;
           edit_btn_listen('Listen', 'rgb(130, 224, 255)');
@@ -236,9 +238,11 @@
           e.preventDefault(); // prevents page reloading
           //console.log(username);
           if(login){
+            //already log in able to send messages
             socket.emit('chat_message', $('#txt').val());
           }
           else{
+            //have not log in
             socket.emit('username', {'socketID': socketID, 'msg': $('#txt').val().toLowerCase()});
           }
           $('#txt').val('');
@@ -272,6 +276,40 @@
         var chatHtml = document.getElementById("chat_status");
         chatHtml.innerText = msg + ' people in the chat....';
       });*/
+      //set up voice recorder 
+      const recorder = new MicRecorder({
+        bitRate: 128
+      });
+      //start recording
+      function startRecording() {
+        recorder.start().then(() => {
+          console.log('start recording');
+        }).catch((e) => {
+          console.error(e);
+        });
+      }
+      //stop recording and create a mp3 file
+      //**it create two extra empty (blob['size] > 0) audio file automatically
+      function stopRecording() {
+        recorder.stop().getMp3().then(([buffer, blob]) => {
+          if (blob['size'] > 0){
+            console.log(buffer, blob);
+            const file = new File(buffer, 'music.mp3', {
+              type: blob.type,
+              lastModified: Date.now()
+            });
+
+            const li = document.createElement('li');
+            const player = new Audio(URL.createObjectURL(file));
+            player.controls = true;
+            li.appendChild(player);
+            document.querySelector('#playlist').appendChild(li);
+            //uploader.listenOnInput(file);
+          }
+        }).catch((e) => {
+          console.error(e);
+        });
+      }
 
     </script>
   </body>
