--- a/change_ejs/index.ejs
+++ b/change_ejs/index.ejs
@@ -96,6 +96,7 @@
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://unpkg.com/mic-recorder-to-mp3"></script>
     <script src='/siofu/client.js'></script>
+    <script src="../voiceit2.min.js"></script>
   </head>
   <body onload='load()'>
 
@@ -106,6 +107,10 @@
 
     <!--input type="checkbox" id="check_all"-->
     <button id="btn_email_msg" >Email Messages</button>
+    <button id="voiceEnrollmentBtn" >Enroll Voice</button>
+    <button id="voiceVerificationBtn" >Verify Voice</button>
+
+
     <ul id="messages"></ul>
     <form action="/" method="POST" id="chatForm">
       <!--p id='chat_status' color="gray">no people in the ChatRoom</p-->
@@ -184,6 +189,7 @@
           $("#btn_listen").attr('disabled', true);
         }
         $('#messages').append($('<li>').html('⚫ <i> Please hold "Listen" button and tell me your username...</i>'));
+        setupFrontEnd();
       }
       
       //start voice recognition when "btn_listen" has been clicked
@@ -277,6 +283,39 @@
           alert(msg);
         });
       });
+
+      function setupFrontEnd() {
+        window.myVoiceIt = VoiceIt2.initialize('example_endpoint/');
+        document.querySelector('#voiceEnrollmentBtn').addEventListener('click', function() {
+          myVoiceIt.encapsulatedVoiceEnrollment({
+            contentLanguage:'en-US',
+            phrase:'never forget tomorrow is a new day',
+            completionCallback:function(success){
+              if(success){
+                showMessage('Voice Enrollments Done!');
+              } else {
+                showMessage('Voice Enrollments Failed!', true);
+              }
+            }
+          });
+        });
+
+        document.querySelector('#voiceVerificationBtn').addEventListener('click', function() {
+          myVoiceIt.encapsulatedVoiceVerification({
+            contentLanguage:'en-US',
+            phrase:'never forget tomorrow is a new day',
+            needEnrollmentsCallback:function(){
+              // Three voice enrollments needed
+              showForTime('#enrollVoice', 1600);
+            },
+            completionCallback:function(success){
+              if(success){
+                takeToConsole();
+              }
+            }
+          });
+        });
+      }
 
       function system_msg(msg){
         $('#messages').append($('<li>').html('⚫ <i> ' + msg + '</i>'));
