--- a/change_ejs/post/index.ejs
+++ b/change_ejs/post/index.ejs
@@ -106,6 +106,9 @@
 
     <!--input type="checkbox" id="check_all"-->
     <button id="btn_email_msg" >Email Messages</button>
+    <a href="/enroll_voice">Enroll Voice</a>    
+    <!--button id="voiceVerificationBtn" >Verify Voice</button-->
+
     <ul id="messages"></ul>
     <form action="/" method="POST" id="chatForm">
       <!--p id='chat_status' color="gray">no people in the ChatRoom</p-->
@@ -131,7 +134,6 @@
         socketID = socket.id;
         //console.log(socketID);
       });
-
 
       //edit bth_listen inner text and color
       function edit_btn_listen(txt, color){
@@ -278,6 +280,8 @@
         });
       });
 
+      
+
       function system_msg(msg){
         $('#messages').append($('<li>').html('⚫ <i> ' + msg + '</i>'));
       }
@@ -308,11 +312,13 @@
         var chatHtml = document.getElementById("chat_status");
         chatHtml.innerText = msg + ' people in the chat....';
       });*/
+
       //set up voice recorder 
       const recorder = new MicRecorder({
         bitRate: 128
       });
-      //start recording
+
+      //start audio recording
       function startRecording() {
         recorder.start().then(() => {
           //console.log('start recording');
