--- a/change_ejs/post/enroll_voice.ejs
+++ b/change_ejs/post/enroll_voice.ejs
@@ -10,83 +10,40 @@
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://unpkg.com/mic-recorder-to-mp3"></script>
     <script src='/siofu/client.js'></script>
-    <script src="../voiceit2.min.js"></script>
   </head>
-  <body onload='load()'>
-    <input id="txt" autocomplete="off" autofocus="on" placeholder="Enter your user real name here" /> <button id = "btn_send" style=" width: 1px; height: 1px; padding: 1px; font-size:1px; margin-left: 2px;">Send</button>
-    <p>Status</p>
-    <button id="btn_listen"  type=button > Listen </button>
-
+  <body>
+    <form action="/" method="POST">
+        <label for="txt"> Username: </label>
+        <input id="txt" autocomplete="off" autofocus="on" placeholder="Please enter here..." /> <button id = "btn_send" style=" width: 1px; height: 1px; padding: 1px; font-size:1px; margin-left: 2px;">Send</button>
+        <p id="status">Status: </p>
+        <button id="btn_listen"  type=button > Start Recording </button>
+    </form>
     <script>
-        const recorder = new MicRecorder({
-            bitRate: 128
-        });
-        const uploader = new SocketIOFileUpload(socket);
         var socket = io.connect();
+        const uploader = new SocketIOFileUpload(socket);
         var recording = false;
         var login = false;
         var real_name = "";
+        var socketid;
 
-        function load(){
-            socket.on('check_real_name', function(msg){
-                if (msg === "SUCC"){
-                    login = true;
-                }
-            });
-            console.log('load');
-            while (login == false){
-                real_name = prompt('Please enter your user name');
-                socket.emit('check_real_name', real_name );
-            }
-            setupFrontEnd();
-
-        }
-        
-        function setupFrontEnd() {
-            window.myVoiceIt = VoiceIt2.initialize('example_endpoint/');
-            document.querySelector('#voiceEnrollmentBtn').addEventListener('click', function() {
-            myVoiceIt.encapsulatedVoiceEnrollment({
-                contentLanguage:'en-US',
-                phrase:'never forget tomorrow is a new day',
-                completionCallback:function(success){
-                if(success){
-                    showMessage('Voice Enrollments Done!');
-                } else {
-                    showMessage('Voice Enrollments Failed!', true);
-                }
-                }
-            });
-            });
-
-            document.querySelector('#voiceVerificationBtn').addEventListener('click', function() {
-            myVoiceIt.encapsulatedVoiceVerification({
-                contentLanguage:'en-US',
-                phrase:'never forget tomorrow is a new day',
-                needEnrollmentsCallback:function(){
-                // Three voice enrollments needed
-                showForTime('#enrollVoice', 1600);
-                },
-                completionCallback:function(success){
-                if(success){
-                    takeToConsole();
-                }
-                }
-            });
-            });
-        }
-
+        $('#btn_listen').prop("disabled", true);
 
         function edit_btn_listen(txt, color){
             $("#btn_listen").html(txt);
             $("#btn_listen").css('background', color);
         }
 
+        //set up voice recorder 
+        const recorder = new MicRecorder({
+            bitRate: 128
+        });
+
         //start audio recording
         function startRecording() {
             recorder.start().then(() => {
-            //console.log('start recording');
+                console.log('start recording');
             }).catch((e) => {
-            console.error(e);
+                console.error(e);
             });
         }
         //stop recording and create a mp3 file
@@ -95,25 +52,48 @@
             recorder.stop().getMp3().then(([buffer, blob]) => {
             if (blob['size'] > 0){
                 //console.log(buffer, blob);
-                const file = new File(buffer, user_realname+'.mp3', {
-                type: blob.type,
-                lastModified: Date.now()
+                const file = new File(buffer, real_name+'.mp3', {
+                    type: blob.type,
+                    lastModified: Date.now()
                 });
                 //send files to node server
-                uploader.submitFiles([file]);
+                //uploader.submitFiles([file]);
             }
             }).catch((e) => {
-            console.error(e);
+                console.error(e);
             });
         }
+        
+        socket.on('check_real_name_res', function(data){
+            //console.log(msg);
+            if (data['msg'] === "SUCC"){
+                //console.log(data['voiceitid'])
+                login = true;
+                $('#txt').prop("disabled", true);
+                $("#btn_listen").prop("disabled", false);
+                $("#status").prop("innerHTML", "Status: You have " + data['enroll_num'] + " audio enrolled (Require at least 3 audios).");
+            }
+            else{
+                $('#txt').val('');
+            }
+        });
+
+        $('#btn_send').click(function(e){
+          e.preventDefault(); // prevents page reloading
+          socketid = socket.id;
+          real_name = $('#txt').val();
+          socket.emit('check_real_name', {"socketid": socketid, "real_name": real_name.toLowerCase()} );
+          
+        });
+
         //start voice recognition when "btn_listen" has been clicked
         $("#btn_listen").on("mousedown", function(){
-            if (recognition != null && !recording){
-            if(login){
-                startRecording();
-            }
-            recording = true;
-            edit_btn_listen('Recording audio for enrollment...', 'lime');
+            if (!recording){
+                if(login){
+                    startRecording();
+                }
+                recording = true;
+                edit_btn_listen('Recording audio for enrollment...', 'lime');
             }
         }).on("mouseup mouseleave", function(){
             //"mouseleave" when mouse leave the button
@@ -121,9 +101,8 @@
             if(login){
                 stopRecording();
             }
-            recognition.stop();
             recording = false;
-            edit_btn_listen('Start recording...', 'rgb(130, 224, 255)');
+            edit_btn_listen('Start recording', 'rgb(130, 224, 255)');
         });
     </script>
   </body>
